<resources>
    <string name="app_name">Pokédex</string>
    <string name="search">Search</string>
    <string name="sort_button">Sort Button</string>
    <string name="error_message">Something went wrong!</string>
    <string name="try_again">Try Again!</string>
    <string name="no_found_pokemon">Not Found Pokemon!</string>
    <string name="sort_by">Sort by:</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="navigate_up">Navigate up</string>
    <string name="previous_pokemon">Previous Pokemon</string>
    <string name="next_pokemon">Next Pokemon</string>
    <string name="about">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="moves">Moves</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">ATK</string>
    <string name="defense">DEF</string>
    <string name="special_attack">SATK</string>
    <string name="special_defense">SDEF</string>
    <string name="speed">SPD</string>
    <string name="weight_unit">%s kg</string>
    <string name="height_unit">%s m</string>
</resources>