<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="pokedexListUiState"
            type="com.prmto.poxedex.presentation.pokedex_list.PokedexListUiState" />

        <variable
            name="viewModel"
            type="com.prmto.poxedex.presentation.pokedex_list.PokedexListViewModel" />

        <variable
            name="errorMessage"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".presentation.pokedex_list.PokedexListFragment">

        <!--region AppBarLayout-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:paddingHorizontal="@dimen/four_level_margin"
            android:paddingTop="@dimen/four_level_margin"
            android:paddingBottom="@dimen/six_level_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imvPokeball"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/pokeball"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPokedexTitle"
                    app:layout_constraintEnd_toStartOf="@+id/tvPokedexTitle"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvPokedexTitle"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvPokedexTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/four_level_margin"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.Poxedex.Headline"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintStart_toEndOf="@+id/imvPokeball"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/two_level_margin"
                    android:layout_marginEnd="@dimen/four_level_margin"
                    android:background="@drawable/bg_color_white_with_radius_16"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="@dimen/two_level_margin"
                    android:drawableTint="?attr/colorPrimary"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:onTextChanged="@{(s,start,end,count)->viewModel.setQuery(String.valueOf(s))}"
                    android:paddingVertical="@dimen/two_level_margin"
                    android:paddingStart="@dimen/four_level_margin"
                    android:paddingEnd="@dimen/three_level_margin"
                    android:textAppearance="@style/TextAppearance.Poxedex.Body3"
                    android:textColorHint="@color/medium"
                    app:layout_constraintEnd_toStartOf="@+id/imbSort"
                    app:layout_constraintStart_toStartOf="@+id/imvPokeball"
                    app:layout_constraintTop_toBottomOf="@+id/tvPokedexTitle" />

                <ImageButton
                    android:id="@+id/imbSort"
                    android:layout_width="@dimen/filter_button_size"
                    android:layout_height="@dimen/filter_button_size"
                    android:background="@drawable/bg_color_white_with_circle"
                    android:contentDescription="@string/sort_button"
                    android:padding="@dimen/two_level_margin"
                    android:src="@drawable/tag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/edtSearch"
                    app:layout_constraintTop_toTopOf="@+id/edtSearch"
                    app:sortType="@{pokedexListUiState.sortType}"
                    app:tint="?attr/colorPrimary"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <!--endregion AppBarLayout-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPoxedexList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/one_level_margin"
            android:layout_marginBottom="@dimen/one_level_margin"
            android:background="@drawable/bg_color_white_with_radius_8"
            android:visibility="@{pokedexListUiState.errorMessageRes == null ? View.VISIBLE : View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:spanCount="@integer/pokedex_list_span_count"
            tools:itemCount="30"
            tools:listitem="@layout/poke_item" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="?attr/colorPrimary"
            android:visibility="@{pokedexListUiState.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <include
            android:id="@+id/includeErrorView"
            layout="@layout/error_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/one_level_margin"
            android:layout_marginBottom="@dimen/one_level_margin"
            android:visibility="@{pokedexListUiState.errorMessageRes != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            bind:errorMessage="@{errorMessage}"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>